# ratata-notes

./: Cargo.toml  README.md
src/: db.rs  main.rs  models.rs
