[package]
name = "notes"
version = "0.1.0"
description = "notes for rats"
authors = ["Thomas Deconinck <thomas.deconinck@colisweb.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
tui-textarea = "0.7.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
